changed button redirect

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
   <h4>Welcome to the Pitt Urban Gaming Club</h4>
   <h1 class="w3-xxxlarge w3-animate-bottom">Humans vs Zombies!</h1>
     <div class="w3-padding-32">
-      <button class="w3-btn w3-xlarge w3-blue w3-hover-blue-grey" onclick="window.location.href('@Url.Action("Player","Players")')" style="font-weight:900;">Go to Player Tracker</button>
+      <a class="button" asp-area="" asp-controller="Players" asp-action="Index">Go to Player Tracker</a>
     </div>
   </div>
 </header>
