--- a/Views/Players/Index.cshtml
+++ b/Views/Players/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Player List</h1>
+<h1 class="title">Player List</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add a Player</a>
 </p>
 <table class="table">
     <thead>
